--- a/views/teams.pug
+++ b/views/teams.pug
@@ -9,9 +9,8 @@ block content
         th Team Name
         th Location
         th Website
-    each team in teams
       tr
         td #{team.team_number}
-        td #{team.nickname}
+        td #{team.name}
         td #{team.location}
         td <a href='#{team.website}'> #{team.website}
