--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,26 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
+    script(src="/javascript/sorttable.js")
+    script(src="https://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=", crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
+    style
+        | body {
+        |       padding: 50px;
+        |         font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+        | }
+        | a {
+        |       color: #00b7ff;
+        | }
+        | table.sortable thead {
+        |       cursor: pointer;
+        | }
+        | table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after {
+        |       content: " \25B4\25BE";
+        | }
   body
-    block content
+    nav.navbar.navbar-default.navbar-fixed-top
+      .navbar-header
+      a.navbar-brand(href="/") Home
+    div.container
+      block content
