--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,5 +25,13 @@ html
     nav.navbar.navbar-default.navbar-fixed-top
       .navbar-header
       a.navbar-brand(href="/") Home
+      ul.nav.navbar-nav
+        if event
+          li: a(href='/event/'+event.key)= event.name
+        if team
+          li: a(href='/team/'+team.team_number) Team #{team.team_number} #{team.name}
+      ul.nav.navbar-nav.navbar-right
+        li: a(href='?refresh=true') Hard Refresh
+        li: a(href='?raw=true') Raw JSON Data
     div.container
       block content
