--- a/views/teamevent.pug
+++ b/views/teamevent.pug
@@ -45,13 +45,14 @@ block content
             li.list-group-item Climbing
                 span.badge Rank #{stats.climb_rank}
                 span.badge= stats.climb.toFixed(2)
+        if typeof(team.image_url) !== 'undefined'
+            .row-sm-1
+                .well.well-sm
+                    a(href=team.image_url)
+                        img(src=team.image_url width="100%" height="30%" style="border-radius: 5px")
     .col-lg-8
         - var predictor = "opr"
         include match.pug
         each match in prediction.matches.sort((a, b) => a.info.match_num - b.info.match_num)
             .col-md-6
                 +score(match)
-    if typeof(team.image_url) !== 'undefined'
-        .well.well-sm
-            a(href=team.image_url)
-                img(src=team.image_url width="100%" height="30%" style="border-radius: 5px")
