--- a/views/teamevent.pug
+++ b/views/teamevent.pug
@@ -45,6 +45,7 @@ block content
             li.list-group-item Climbing
                 span.badge Rank #{stats.climb_rank}
                 span.badge= stats.climb.toFixed(2)
+        p Confused? Each "Component OPR" is the average contribution in each category for the team at the selected event
         if typeof(team.image_url) !== 'undefined'
             .row-sm-1
                 .well.well-sm
