--- a/views/match.pug
+++ b/views/match.pug
@@ -10,9 +10,9 @@ mixin alliance(alli, match)
         if match.info.hasOccured
             div(style="float:right;margin-left:3px;font-family:monospace;") #{match.info.score[alli].points.total}
         if match[predictor].winner === alli
-            div(style="float:right;font-weight:bold;font-family:monospace;") (~#{match[predictor][alli].toFixed(0)})
+            div(style="float:right;font-weight:bold;font-family:monospace;") (#{match[predictor][alli].toFixed(0)})
         else
-            div(style="float:right;font-family:monospace;") (~#{match[predictor][alli].toFixed(0)})
+            div(style="float:right;font-family:monospace;") (#{match[predictor][alli].toFixed(0)})
 
 mixin score(match)
     .well.well-sm(style="background:white")
