--- a/views/teamevent.pug
+++ b/views/teamevent.pug
@@ -52,7 +52,8 @@ block content
                     a(href=team.image_url)
                         img(src=team.image_url width="100%" height="30%" style="border-radius: 5px")
     .col-lg-8
-        - var predictor = "opr"
+        - console.log(prediction)
+        - var predictor = prediction.best_predictor
         include match.pug
         each match in prediction.matches.sort((a, b) => a.info.match_num - b.info.match_num)
             .col-md-6
