--- a/views/teamevent.pug
+++ b/views/teamevent.pug
@@ -25,9 +25,9 @@ block content
                 span.badge= stats.foul.toFixed(2)
         h4 Auto
         ul.list-group
-            li.list-group-item Rotor
-                span.badge Rank #{stats.rotor_auto_rank}
-                span.badge= stats.rotor_auto.toFixed(2)
+            li.list-group-item Gear
+                span.badge Rank #{stats.gear_auto_rank}
+                span.badge= stats.gear_auto.toFixed(2)
             li.list-group-item Fuel
                 span.badge Rank #{stats.fuel_auto_rank}
                 span.badge= stats.fuel_auto.toFixed(2)
@@ -36,9 +36,9 @@ block content
                 span.badge= stats.mobility.toFixed(2)
         h4 Teleop
         ul.list-group
-            li.list-group-item Rotor
-                span.badge Rank #{stats.rotor_teleop_rank}
-                span.badge= stats.rotor_teleop.toFixed(2)
+            li.list-group-item Gear
+                span.badge Rank #{stats.gear_teleop_rank}
+                span.badge= stats.gear_teleop.toFixed(2)
             li.list-group-item Fuel
                 span.badge Rank #{stats.fuel_teleop_rank}
                 span.badge= stats.fuel_teleop.toFixed(2)
